--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "expo": "^37.0.0",
+    "expo-notifications": "~0.1.1",
+    "expo-permissions": "~8.1.0",
+    "expo-secure-store": "~8.1.0",
     "global": "^4.4.0",
+    "install": "^0.13.0",
     "react": "16.9.0",
     "react-devtools": "^3.2.3",
     "react-dom": "16.9.0",
@@ -26,7 +30,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.9.1",
     "redux-thunk": "^2.2.0",
-    "expo-secure-store": "~8.1.0"
+    "expo-mail-composer": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.1.0",
