--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "expo": "^37.0.0",
+    "expo-asset": "^8.1.7",
+    "expo-image-manipulator": "^8.2.1",
+    "expo-image-picker": "~8.1.0",
+    "expo-mail-composer": "~8.1.0",
     "expo-notifications": "~0.1.1",
     "expo-permissions": "~8.1.0",
     "expo-secure-store": "~8.1.0",
@@ -29,8 +33,7 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.9.1",
-    "redux-thunk": "^2.2.0",
-    "expo-mail-composer": "~8.1.0"
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.1.0",
