--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^5.9.4",
     "expo": "^37.0.0",
     "expo-asset": "^8.1.7",
     "expo-image-manipulator": "^8.2.1",
